discussion/kv_engine/184396/184396_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Backfill History

Change-Id: Idf2bf082c3ecb78b93e393c1d6b796b598e3b80b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-09 16:47:42.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-09 16:47:59.000000000
Message: 
Patch Set 4: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/331447/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-09 17:11:47.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/762/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.cc:301:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.cc:329:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.cc:338:5: error: use of undeclared identifier "EP_LOG_DEBUG" [clang-diagnostic-error]
    EP_LOG_DEBUG("DCPBackfillDisk::scanHistory ({}) running", getVBucketId());
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/762/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill_disk.cc:301:9:
error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/762/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/939/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc(460): error C2660: "magma::Magma::SetHistoryRetentionSize": function does not take 1 arguments ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/939/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/733/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill_disk.cc:301:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/733/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/773/ : FAILURE

Compile error at [2023-01-09T17:07:22.834Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:460:48:
error: no matching function for call to ?magma::Magma::SetHistoryRetentionSize(size_t&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/773/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/774/ : FAILURE

Compile error at [2023-01-09T17:10:33.114Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:460:48:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/774/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/767/ : FAILURE

Compile error at [2023-01-09T16:58:42.822Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:460:48:
error: no matching function for call to ?magma::Magma::SetHistoryRetentionSize(size_t&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/767/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/781/ : FAILURE

Compile error at [2023-01-09T16:54:11.968Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:460:48:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/781/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/754/ : FAILURE

Compile error at [2023-01-09T17:10:35.973Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:460:48:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/754/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/783/ : FAILURE

Compile error at [2023-01-09T16:57:04.094Z] ../kv_engine/engines/ep/tests/module_tests/history_scan_test.cc:220:53:
error: ?magmaConfigValues? is not a member of ?STParameterizedBucketTest?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/783/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1047/ : FAILURE

Compile error at [2023-01-09T16:53:41.977Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:460:48:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1047/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22039/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
